--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
+    "pg": "^8.13.0",
+    "sqlite3": "^5.1.7"
   },
   "description": ""
 }
